@@ -161,6 +161,15 @@
       layer="izug.basetheme.browser.interfaces.IIzugSpecific"
       />  
 
+  <!-- A content provider showing the menu customised for izug -->
+  <adapter
+      for="Products.ATContentTypes.interface.interfaces.IATContentType
+           zope.publisher.interfaces.browser.IDefaultBrowserLayer
+           *"
+      factory=".contentmenu.ContentMenuProvider"
+      name="plone.contentmenu"
+      provides="zope.contentprovider.interfaces.IContentProvider"
+      />
   <!-- for plone 3 only -->
   <browser:viewlet
       name="ftw.contentviews"
