@@ -5,6 +5,9 @@ Changelog
 1.0a11
 ------
 
+* Added adapter for plone.contentmenu to handle sprites in the contentmenu
+  [eschmutz]
+
 * Issue #1553 Behoerden - Anzeige Prozesslandkarte     
   https://extranet.4teamwork.ch/support/zug/maintlog/1553
   [ttschanz]
